trunk/Archive2/1f/bd8b63a16fc08e/output
main.cpp: In function 'int main()':
main.cpp:30:20: error: use of deleted function 'S2::S2(const S2&)'
     auto no_copy = b;
                    ^
main.cpp:13:8: note: 'S2::S2(const S2&)' is implicitly deleted because the default definition would be ill-formed:
 struct S2 {
        ^
main.cpp:13:8: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = int; _Dp = std::default_delete<int>]'
In file included from /usr/local/include/c++/4.9.0/memory:81:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
